@@ -1,5 +1,6 @@
 Version 4.2
 
+* IMPROVEMENT: Changed signature identity separator to <space>::<space>.
 * BUGFIX: Removed SHA-224 hash algorithm. Added internal policy rule to check aggregation hash chain link legacyId content.
 * BUGFIX: Removed KSI.asyncExtendToHead() and KSI.extendToHead() methods
 * BUGFIX: Fixed a bug when a fallback policy succeeded but verification result contained error code.
